--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -7,7 +7,7 @@
     <title>MineSweeper Pro</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body onload="onInit()">
+<body onload="onInit()" oncontextmenu="return false">
     <h1>💣 Minesweeper Pro 💣</h1>
     
     <table> 
