--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <button class="level level3" onclick="selectLevel({size: 12, mines: 32})">Expert</button>
     
     <div class="user-panel">
-        <div class="restart"><button onclick="onInit()">😃</button></div>
+        <div class="restart"><button onclick="restart()">😃</button></div>
+        <div class="mines">💣 <span class='mines-counter'>00</span></div>
         <div class="time">⏱️ <span class='timer'>000</span></div>
     </div>
     
