--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <tbody class="board"></tbody>
     </table>
 
-    <h3>👑 Best time ⏱️: <span class="best-time"></span>[sec]</h3>
+    <h3> Lives left: <span class="lives"></span>⏱️ Best time: <span class="best-time"></span>[sec] 👑</h3>
     
 
     <div class="footer">--- Gideon Levinson ---</div>
